--- a/admin/package.json
+++ b/admin/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "client",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
+    "@mui/styled-engine": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "js-cookie": "^3.0.5",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
-    "react-date-range": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
     "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,9 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@types/react-date-range": "^1.4.4"
   }
 }
