--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
