--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "jwt-simple": "^0.5.6",
     "mysql2": "^3.2.4",
     "pg": "^8.10.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
