--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
