--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
