--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/icons-material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
