--- a/admin/package.json
+++ b/admin/package.json
@@ -19,7 +19,11 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
     "node-sass": "^7.0.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confirm-alert": "^3.0.6",
