--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,14 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
