--- a/admin/package.json
+++ b/admin/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
   }
 }
