--- a/admin/package.json
+++ b/admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
@@ -64,7 +65,6 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+    "@types/js-cookie": "^3.0.3"
   }
 }
